--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -38,4 +38,5 @@ html(lang="en")
             a(href="https://github.com/willmarino/limit-handler-api" class="site-footer-github secondary-color primary-shadow") Check out the code here :)
 
         script(src="https://unpkg.com/htmx.org@1.9.12" integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2" crossorigin="anonymous")
+        //- script(src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js")
 
