--- a/src/assets/css/buttons.css
+++ b/src/assets/css/buttons.css
@@ -28,6 +28,16 @@
     border-radius: 5px;
 }
 
+.submit-button-short{
+    width: 100%;
+    height: 40px;
+
+    margin: 5px 0px 0px 0px;
+
+    border-radius: 5px;
+}
+
 .submit-button p{
     font-size: 14px;
 }
+
