--- a/src/assets/css/forms.css
+++ b/src/assets/css/forms.css
@@ -70,6 +70,15 @@ form{
     border: 1px solid #3f3f46;
 }
 
+.dual-input{
+    display: flex;
+}
+
+.dual-input select{
+    width: 100px;
+    margin-left: 20px;
+}
+
 /* choices */
 .choice{
     margin-bottom: 10px;
