--- a/src/views/users/lobby.pug
+++ b/src/views/users/lobby.pug
@@ -16,7 +16,7 @@ block content
 
                             if userInfo.organizations.length > 0
                                 div(class="org-bar")
-                                    select(class="primary-button secondary-color secondary-shadow clickable")
+                                    select(class="primary-button secondary-color secondary-shadow clickable select-option")
                                         option #{userInfo.organizations[0].name}
                                     div(class="primary-button secondary-color secondary-shadow clickable" hx-get="/organizations/create" hx-target=".page")
                                         p(class="fs-12") Create New Org
@@ -43,7 +43,7 @@ block content
                                     p(class="form-label") Invite Member
                                     div(class="dual-input")
                                         input.edit(class="secondary-shadow" name="receiverInfo" placeholder="Email or username...")
-                                        select(class="primary-button secondary-color secondary-shadow clickable" name="userRoleName")
+                                        select(class="primary-button secondary-color secondary-shadow clickable select-option" name="userRoleName")
                                             - for(const userRoleName of userInfo.userRoles)
                                                 option #{userRoleName}
                                 div(class="button-and-message")
@@ -71,7 +71,7 @@ block content
                             div(class="lobby-main-header-left")
                                 div(class="lobby-main-header-left-section")
                                     p Project:
-                                    select(class="project-dropdown primary-button secondary-color secondary-shadow clickable")
+                                    select(class="project-dropdown primary-button secondary-color secondary-shadow clickable select-option")
                                         - for(const p of curOrg.projects)
                                             option #{curProject.name}
                             div(class="lobby-main-header-right")
