--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,6 +1,5 @@
 *{
-    /* font-family: "Roboto", serif; */
-    font-family: "Rubik", serif;
+    font-family: "RubikNormal", serif;
 }
 html{
     width: 100vw;
