--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -1,12 +1,10 @@
 @font-face{
-    font-family: "Roboto";
-    src: url("../fonts/roboto/Roboto-Regular.ttf");
-}
-
-@font-face{
-    font-family: "Rubik";
+    font-family: "RubikNormal";
     src: url("../fonts/rubik/Rubik-Regular.ttf")
-    /* src: url("../fonts/rubik/Rubik-Medium.ttf") */
+}
+@font-face{
+    font-family: "RubikBold";
+    src: url("../fonts/rubik/Rubik-Medium.ttf");
 }
 
 .fs-12{
@@ -15,4 +13,8 @@
 
 .fs-14{
     font-size: 14px;
+}
+
+.bold{
+    font-family: "RubikBold", serif;
 }
