--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -12,6 +12,7 @@ html(lang="en")
         link(rel="stylesheet" type="text/css" href="/css/forms.css")
         link(rel="stylesheet" type="text/css" href="/css/auth.css")
         link(rel="stylesheet" type="text/css" href="/css/lobby.css")
+        link(rel="stylesheet" type="text/css" href="/css/profile.css")
         link(rel="stylesheet" type="text/css" href="/css/org_creation.css")
         link(rel="stylesheet" type="text/css" href="/css/colors.css")
         link(rel="stylesheet" type="text/css" href="/css/shadows.css")
@@ -30,6 +31,8 @@ html(lang="en")
                     img(src="/img/logo/clock_24.png")
 
                 div(class="site-header-right")
+                    button(class="secondary-color secondary-shadow" hx-get="/users/show" hx-target=".page") Dashboard
+                    button(class="secondary-color secondary-shadow" hx-get="/users/profile" hx-target=".page") Profile
                     button(class="secondary-color secondary-shadow") Questions
                     - if(loggedOut !== true)
                         button(id="logout-button" class="secondary-color secondary-shadow" hx-post="/auth/logout" hx-target=".page") Logout
@@ -44,5 +47,4 @@ html(lang="en")
             a(href="https://github.com/willmarino/limit-handler-api" class="site-footer-github secondary-color primary-shadow") Check out the code here :)
 
         script(src="https://unpkg.com/htmx.org@1.9.12" integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2" crossorigin="anonymous")
-        //- script(src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js")
 
