--- a/src/views/users/lobby.pug
+++ b/src/views/users/lobby.pug
@@ -1,5 +1,5 @@
 extends ../layouts/main.pug
-//- TODO set up true iteration through organizations and projects, took a shortcut to work on UI (always show first)
+//- TODO set up true iteration through organizations and projects, took a shortcut to work on UI (always show first org)
 block content
 
     div(class="page-content")
