--- a/src/assets/css/lobby.css
+++ b/src/assets/css/lobby.css
@@ -5,20 +5,55 @@
 }
 
 .lobby-sidebar{
-    min-width: 400px;
+    min-width: 300px;
     min-height: 800px;
     
     flex-grow: 0;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    flex-direction: start;
+    /* flex-direction: column; */
+    /* justify-content: space-between; v1 */
+    justify-content: center;
 
     padding: 20px;
 
     border-radius: 5px;
 }
 
-.lobby-sidebar-user-info{
+
+
+/* v2 sidebar */
+
+.lobby-sidebar ul{
+    width: 100%;
+    height: 80px;
+
+    margin-top: 100px;
+
+}
+
+
+.lobby-sidebar ul li{
+    height: 20px;
+    margin-bottom: 10px;
+    background: green;
+}
+
+
+
+
+
+
+
+
+/* v2 sidebar*/
+
+
+
+
+
+
+/* .lobby-sidebar-user-info{
     height: 140px;
 }
 
@@ -126,7 +161,7 @@
     text-align: center;
     font-size: 13px;
     color: #006A4E;
-}
+} */
 
 
 
@@ -135,13 +170,46 @@
     min-width: 600px;
     flex-grow: 1;
 
+    display: flex;
+    flex-direction: column;
+
     padding: 20px;
     margin-left: 100px;
 
     border-radius: 5px;
 }
 
-.new-project-prompt{
+
+/* v2 */
+
+.lobby-main .header{
+    width: 100%;
+    height: 60px;
+    flex-grow: 0;
+
+    background: green;
+}
+
+.lobby-main .header p{
+    height: 60px;
+    line-height: 60px;
+    font-size: 14px;
+}
+
+.lobby-main .body{
+    width: 100%;
+    flex-grow: 1;
+
+    margin-top: 40px;
+    
+    background: green;
+
+}
+
+
+/* v2 */
+
+/* .new-project-prompt{
     width: 400px;
     height: 80px;
 
@@ -150,8 +218,8 @@
     justify-content: space-between;
     align-items: center;
 
-    /* background: red; */
-}
+    background: red;
+} */
 
 
 /* TODO clean up outdated class stylings, dont need to have 'lobby-button', this should be in buttons.css */
@@ -159,7 +227,7 @@
 
 
 /*  */
-.lobby-main-header{
+/* .lobby-main-header{
     width: 100%;
     height: 35px;
 
@@ -167,14 +235,14 @@
     justify-content: space-between;
     align-items: center;
 
-    /* border: 1px solid black; */
-}
+    border: 1px solid black;
+} */
 
-.lobby-main-header-left{
+/* .lobby-main-header-left{
     height: 100%;
-}
+} */
 
-.lobby-main-header-left-section{
+/* .lobby-main-header-left-section{
     height: 100%;
 
     display: flex;
@@ -182,18 +250,17 @@
     align-items: center;
 
     font-size: 14px;
-    /* background: green; */
-}
+} */
 
-.lobby-main-header-right{
+/* .lobby-main-header-right{
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 
-}
+} */
 
-.lobby-main-header-right-section{
+/* .lobby-main-header-right-section{
     width: 120px;
     height: 100%;
 
@@ -204,20 +271,20 @@
     margin: 0px 0px 0px 10px;
     
     font-size: 14px;
-    /* background: red; */
-}
+    background: red;
+} */
 
 
 /*  */
-.lobby-main-body{
+/* .lobby-main-body{
     height: 580px;
 
     margin-top: 20px;
 
-    /* background: blue; */
-}
+    background: blue;
+} */
 
-.project-dropdown{
+/* .project-dropdown{
     margin-left: 10px;
 }
 
@@ -226,8 +293,8 @@
 }
 
 
-/*  */
+
 #project-stats-chart{
     height: 100%;
     width: 100%;
-}
+} */
