--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -17,6 +17,7 @@ html(lang="en")
         link(rel="stylesheet" type="text/css" href="/css/colors.css")
         link(rel="stylesheet" type="text/css" href="/css/shadows.css")
         link(rel="stylesheet" type="text/css" href="/css/fonts.css")
+
         script(src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js")
     body
         
@@ -24,14 +25,16 @@ html(lang="en")
         div(class="page background-color")
 
             //- header
-            div(class="site-header soft-shadow")
+            //- div(class="site-header soft-shadow")
+            div(class="site-header outline")
 
                 button(class="site-header-left clickable" hx-get="/auth/login" hx-target=".page")
                     p Limit Handler
                     img(src="/img/logo/clock_24.png")
 
                 div(class="site-header-right")
-                    button(class="secondary-color secondary-shadow" hx-get="/users/show" hx-target=".page") Dashboard
+                    //- button(class="secondary-color secondary-shadow" hx-get="/users/show" hx-target=".page") Dashboard
+                    button(class="secondary-color secondary-shadow" hx-get="/projects/recent" hx-target=".page") Dashboard
                     button(class="secondary-color secondary-shadow" hx-get="/users/profile" hx-target=".page") Profile
                     button(class="secondary-color secondary-shadow") Questions
                     - if(loggedOut !== true)
