--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -17,6 +17,8 @@ html(lang="en")
         link(rel="stylesheet" type="text/css" href="/css/colors.css")
         link(rel="stylesheet" type="text/css" href="/css/shadows.css")
         link(rel="stylesheet" type="text/css" href="/css/fonts.css")
+        
+        link(rel="stylesheet" type="text/css" href="/css/projects.css")
 
         script(src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js")
     body
@@ -34,7 +36,7 @@ html(lang="en")
 
                 div(class="site-header-right")
                     //- button(class="secondary-color secondary-shadow" hx-get="/users/show" hx-target=".page") Dashboard
-                    button(class="secondary-color secondary-shadow" hx-get="/projects/recent" hx-target=".page") Dashboard
+                    button(class="secondary-color secondary-shadow" hx-get="/projects" hx-target=".page") Dashboard
                     button(class="secondary-color secondary-shadow" hx-get="/users/profile" hx-target=".page") Profile
                     button(class="secondary-color secondary-shadow") Questions
                     - if(loggedOut !== true)
